Adding Chroma Example

--- a/04_Audio_Data_Model_MFCC.ipynb
+++ b/04_Audio_Data_Model_MFCC.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Building an Audio Data Model using MFCCs"
+    "# Building an Audio Data Model using MFCC Features"
    ]
   },
   {
@@ -61,7 +61,7 @@
    "outputs": [],
    "source": [
     "num_mfccs = 20\n",
-    "max_mfcc_length = 128\n",
+    "max_feature_length = 128\n",
     "\n",
     "train_data_path = \"data/audio_train/train/\"\n",
     "val_data_path = \"data/audio_train/validation/\"\n",
@@ -243,6 +243,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 164,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'list' object has no attribute 'shape'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-164-e01f4b844c4b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmfccs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m: 'list' object has no attribute 'shape'"
+     ]
+    }
+   ],
+   "source": [
+    "mfccs.shape"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -288,7 +309,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_mfccs(wav_file, num_mfcc=20, max_length = 128):\n",
+    "def get_mfccs(wav_file, num_mfcc=20, max_length=128):\n",
     "    raw_audio, sample_rate = librosa.load(wav_file, sr=None, duration=1)\n",
     "    mfccs = librosa.feature.mfcc(y=raw_audio, sr=sample_rate, n_mfcc=num_mfcc)\n",
     "    \n",
@@ -315,7 +336,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mfccs = []\n",
+    "mfcc_list = []\n",
     "category_list = []\n",
     "\n",
     "for root, subdirs, files in os.walk(train_data_path):\n",
@@ -323,8 +344,8 @@
     "    for subdir in subdirs:\n",
     "        for file_name in os.listdir(os.path.join(root, subdir)):\n",
     "            if file_name.endswith(\".wav\"):\n",
-    "                mfcc = get_mfccs(os.path.join(root, subdir, file_name), num_mfccs, max_mfcc_length)\n",
-    "                mfccs.append(mfcc)\n",
+    "                mfcc = get_mfccs(os.path.join(root, subdir, file_name), num_mfccs, max_feature_length)\n",
+    "                mfcc_list.append(mfcc)\n",
     "                category_list.append(subdir)"
    ]
   },
@@ -334,7 +355,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_features = np.array(mfccs)"
+    "X_features = np.array(mfcc_list)"
    ]
   },
   {
@@ -343,6 +364,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from sklearn import preprocessing\n",
     "le = preprocessing.LabelEncoder()\n",
     "y_features = keras.utils.np_utils.to_categorical(le.fit_transform(category_list))"
    ]
@@ -581,7 +603,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mfcc = np.array([get_mfccs(\"{}Bass_drum/f78fbf28.wav\".format(val_data_path))])"
+    "mfcc = np.array([get_mfccs(\"{}Bass_drum/f78fbf28.wav\".format(val_data_path), num_mfccs, max_feature_length)])"
    ]
   },
   {
@@ -781,7 +803,7 @@
     "for index, row in df_validation.iterrows():\n",
     "    val_file_path = \"{}{}/{}\".format(val_data_path, row['label'], row['fname'])\n",
     "  \n",
-    "    mfcc = np.array([get_mfccs(val_file_path)])\n",
+    "    mfcc = np.array([get_mfccs(val_file_path, num_mfccs, max_feature_length)])\n",
     "    prediction = model.predict(mfcc)\n",
     "    predicted_label = le.classes_[np.argmax(prediction)]\n",
     "\n",
