Adding Transcription Example

--- a/04_Audio_Data_Model_Chromagram.ipynb
+++ b/04_Audio_Data_Model_Chromagram.ipynb
@@ -30,9 +30,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "import librosa\n",
     "import librosa.display\n",
@@ -56,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +111,7 @@
        "       -6.1035156e-05,  6.1035156e-05, -3.0517578e-05], dtype=float32)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -114,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +131,7 @@
        "(312228,)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -134,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +151,7 @@
        "44100"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +178,7 @@
        "Text(0.5, 1.0, 'RAW Audio')"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -202,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +240,7 @@
        "        0.86646533]])"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +260,7 @@
        "(12, 610)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -265,12 +273,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Visualize the Chroma"
+    "#### Visualize the Chromagam"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -303,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -330,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -358,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -392,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -410,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -418,114 +426,114 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/50\n",
-      "2968/2968 [==============================] - 7s 2ms/step - loss: 3.4011 - categorical_accuracy: 0.0984\n",
+      "2968/2968 [==============================] - 7s 2ms/step - loss: 3.4226 - categorical_accuracy: 0.1055\n",
       "Epoch 2/50\n",
-      "2968/2968 [==============================] - 5s 2ms/step - loss: 3.1247 - categorical_accuracy: 0.1432\n",
+      "2968/2968 [==============================] - 5s 2ms/step - loss: 3.1523 - categorical_accuracy: 0.1503\n",
       "Epoch 3/50\n",
-      "2968/2968 [==============================] - 5s 2ms/step - loss: 2.9773 - categorical_accuracy: 0.1675\n",
+      "2968/2968 [==============================] - 5s 2ms/step - loss: 3.0226 - categorical_accuracy: 0.1678\n",
       "Epoch 4/50\n",
-      "2968/2968 [==============================] - 5s 2ms/step - loss: 2.8605 - categorical_accuracy: 0.1974\n",
+      "2968/2968 [==============================] - 5s 2ms/step - loss: 2.9186 - categorical_accuracy: 0.1698\n",
       "Epoch 5/50\n",
-      "2968/2968 [==============================] - 5s 2ms/step - loss: 2.7625 - categorical_accuracy: 0.2247\n",
+      "2968/2968 [==============================] - 5s 2ms/step - loss: 2.7789 - categorical_accuracy: 0.2163\n",
       "Epoch 6/50\n",
-      "2968/2968 [==============================] - 5s 2ms/step - loss: 2.6773 - categorical_accuracy: 0.2439\n",
+      "2968/2968 [==============================] - 5s 2ms/step - loss: 2.6949 - categorical_accuracy: 0.2318\n",
       "Epoch 7/50\n",
-      "2968/2968 [==============================] - 5s 2ms/step - loss: 2.6106 - categorical_accuracy: 0.2689\n",
+      "2968/2968 [==============================] - 5s 2ms/step - loss: 2.6087 - categorical_accuracy: 0.2591\n",
       "Epoch 8/50\n",
-      "2968/2968 [==============================] - 5s 2ms/step - loss: 2.5243 - categorical_accuracy: 0.2894\n",
+      "2968/2968 [==============================] - 5s 2ms/step - loss: 2.5631 - categorical_accuracy: 0.2719\n",
       "Epoch 9/50\n",
-      "2968/2968 [==============================] - 5s 2ms/step - loss: 2.4515 - categorical_accuracy: 0.3103\n",
+      "2968/2968 [==============================] - 6s 2ms/step - loss: 2.4750 - categorical_accuracy: 0.2958\n",
       "Epoch 10/50\n",
-      "2968/2968 [==============================] - 5s 2ms/step - loss: 2.3959 - categorical_accuracy: 0.3211\n",
+      "2968/2968 [==============================] - 5s 2ms/step - loss: 2.4379 - categorical_accuracy: 0.2968\n",
       "Epoch 11/50\n",
-      "2968/2968 [==============================] - 5s 2ms/step - loss: 2.3235 - categorical_accuracy: 0.3396\n",
+      "2968/2968 [==============================] - 5s 2ms/step - loss: 2.3487 - categorical_accuracy: 0.3272\n",
       "Epoch 12/50\n",
-      "2968/2968 [==============================] - 5s 2ms/step - loss: 2.2677 - categorical_accuracy: 0.3639\n",
+      "2968/2968 [==============================] - 5s 2ms/step - loss: 2.2935 - categorical_accuracy: 0.3497\n",
       "Epoch 13/50\n",
-      "2968/2968 [==============================] - 5s 2ms/step - loss: 2.2018 - categorical_accuracy: 0.3743\n",
+      "2968/2968 [==============================] - 5s 2ms/step - loss: 2.2482 - categorical_accuracy: 0.3544\n",
       "Epoch 14/50\n",
-      "2968/2968 [==============================] - 5s 2ms/step - loss: 2.1739 - categorical_accuracy: 0.3669\n",
+      "2968/2968 [==============================] - 5s 2ms/step - loss: 2.2318 - categorical_accuracy: 0.3494\n",
       "Epoch 15/50\n",
-      "2968/2968 [==============================] - 5s 2ms/step - loss: 2.0904 - categorical_accuracy: 0.4090\n",
+      "2968/2968 [==============================] - 5s 2ms/step - loss: 2.1490 - categorical_accuracy: 0.3861\n",
       "Epoch 16/50\n",
-      "2968/2968 [==============================] - 5s 2ms/step - loss: 2.0713 - categorical_accuracy: 0.4114\n",
+      "2968/2968 [==============================] - 5s 2ms/step - loss: 2.0945 - categorical_accuracy: 0.4003\n",
       "Epoch 17/50\n",
-      "2968/2968 [==============================] - 5s 2ms/step - loss: 2.0138 - categorical_accuracy: 0.4269\n",
+      "2968/2968 [==============================] - 5s 2ms/step - loss: 2.0618 - categorical_accuracy: 0.4104\n",
       "Epoch 18/50\n",
-      "2968/2968 [==============================] - 5s 2ms/step - loss: 1.9354 - categorical_accuracy: 0.4441\n",
+      "2968/2968 [==============================] - 5s 2ms/step - loss: 1.9962 - categorical_accuracy: 0.4212\n",
       "Epoch 19/50\n",
-      "2968/2968 [==============================] - 5s 2ms/step - loss: 1.8974 - categorical_accuracy: 0.4468\n",
+      "2968/2968 [==============================] - 5s 2ms/step - loss: 1.9463 - categorical_accuracy: 0.4447\n",
       "Epoch 20/50\n",
-      "2968/2968 [==============================] - 5s 2ms/step - loss: 1.8560 - categorical_accuracy: 0.4606\n",
+      "2968/2968 [==============================] - 5s 2ms/step - loss: 1.8992 - categorical_accuracy: 0.4532\n",
       "Epoch 21/50\n",
-      "2968/2968 [==============================] - 5s 2ms/step - loss: 1.8311 - categorical_accuracy: 0.4727\n",
+      "2968/2968 [==============================] - 5s 2ms/step - loss: 1.8536 - categorical_accuracy: 0.4656\n",
       "Epoch 22/50\n",
-      "2968/2968 [==============================] - 5s 2ms/step - loss: 1.7739 - categorical_accuracy: 0.4966\n",
+      "2968/2968 [==============================] - 5s 2ms/step - loss: 1.8229 - categorical_accuracy: 0.4663\n",
       "Epoch 23/50\n",
-      "2968/2968 [==============================] - 5s 2ms/step - loss: 1.7177 - categorical_accuracy: 0.5074\n",
+      "2968/2968 [==============================] - 5s 2ms/step - loss: 1.7622 - categorical_accuracy: 0.4943\n",
       "Epoch 24/50\n",
-      "2968/2968 [==============================] - 5s 2ms/step - loss: 1.6934 - categorical_accuracy: 0.5034\n",
+      "2968/2968 [==============================] - 5s 2ms/step - loss: 1.7324 - categorical_accuracy: 0.4855\n",
       "Epoch 25/50\n",
-      "2968/2968 [==============================] - 5s 2ms/step - loss: 1.6551 - categorical_accuracy: 0.5202\n",
+      "2968/2968 [==============================] - 5s 2ms/step - loss: 1.6527 - categorical_accuracy: 0.5239\n",
       "Epoch 26/50\n",
-      "2968/2968 [==============================] - 5s 2ms/step - loss: 1.6048 - categorical_accuracy: 0.5381\n",
+      "2968/2968 [==============================] - 5s 2ms/step - loss: 1.6472 - categorical_accuracy: 0.5195\n",
       "Epoch 27/50\n",
-      "2968/2968 [==============================] - 5s 2ms/step - loss: 1.5432 - categorical_accuracy: 0.5553\n",
+      "2968/2968 [==============================] - 5s 2ms/step - loss: 1.5903 - categorical_accuracy: 0.5367\n",
       "Epoch 28/50\n",
-      "2968/2968 [==============================] - 5s 2ms/step - loss: 1.5270 - categorical_accuracy: 0.5576\n",
+      "2968/2968 [==============================] - 5s 2ms/step - loss: 1.5764 - categorical_accuracy: 0.5438\n",
       "Epoch 29/50\n",
-      "2968/2968 [==============================] - 5s 2ms/step - loss: 1.4826 - categorical_accuracy: 0.5691\n",
+      "2968/2968 [==============================] - 5s 2ms/step - loss: 1.4958 - categorical_accuracy: 0.5778\n",
       "Epoch 30/50\n",
-      "2968/2968 [==============================] - 5s 2ms/step - loss: 1.4619 - categorical_accuracy: 0.5836\n",
+      "2968/2968 [==============================] - 5s 2ms/step - loss: 1.4739 - categorical_accuracy: 0.5660\n",
       "Epoch 31/50\n",
-      "2968/2968 [==============================] - 5s 2ms/step - loss: 1.4149 - categorical_accuracy: 0.5930\n",
+      "2968/2968 [==============================] - 5s 2ms/step - loss: 1.4616 - categorical_accuracy: 0.5721\n",
       "Epoch 32/50\n",
-      "2968/2968 [==============================] - 5s 2ms/step - loss: 1.3773 - categorical_accuracy: 0.6098\n",
+      "2968/2968 [==============================] - 5s 2ms/step - loss: 1.3831 - categorical_accuracy: 0.6105\n",
       "Epoch 33/50\n",
-      "2968/2968 [==============================] - 5s 2ms/step - loss: 1.3858 - categorical_accuracy: 0.5997\n",
+      "2968/2968 [==============================] - 5s 2ms/step - loss: 1.3906 - categorical_accuracy: 0.5950\n",
       "Epoch 34/50\n",
-      "2968/2968 [==============================] - 5s 2ms/step - loss: 1.3020 - categorical_accuracy: 0.6186\n",
+      "2968/2968 [==============================] - 5s 2ms/step - loss: 1.3417 - categorical_accuracy: 0.6156\n",
       "Epoch 35/50\n",
-      "2968/2968 [==============================] - 5s 2ms/step - loss: 1.2959 - categorical_accuracy: 0.6263\n",
+      "2968/2968 [==============================] - 5s 2ms/step - loss: 1.3114 - categorical_accuracy: 0.6277\n",
       "Epoch 36/50\n",
-      "2968/2968 [==============================] - 5s 2ms/step - loss: 1.2610 - categorical_accuracy: 0.6311\n",
+      "2968/2968 [==============================] - 5s 2ms/step - loss: 1.2732 - categorical_accuracy: 0.6392\n",
       "Epoch 37/50\n",
-      "2968/2968 [==============================] - 5s 2ms/step - loss: 1.2648 - categorical_accuracy: 0.6287\n",
+      "2968/2968 [==============================] - 5s 2ms/step - loss: 1.2585 - categorical_accuracy: 0.6351\n",
       "Epoch 38/50\n",
-      "2968/2968 [==============================] - 5s 2ms/step - loss: 1.2192 - categorical_accuracy: 0.6553\n",
+      "2968/2968 [==============================] - 5s 2ms/step - loss: 1.1934 - categorical_accuracy: 0.6600\n",
       "Epoch 39/50\n",
-      "2968/2968 [==============================] - 5s 2ms/step - loss: 1.1641 - categorical_accuracy: 0.6678\n",
+      "2968/2968 [==============================] - 5s 2ms/step - loss: 1.1684 - categorical_accuracy: 0.6678\n",
       "Epoch 40/50\n",
-      "2968/2968 [==============================] - 5s 2ms/step - loss: 1.1502 - categorical_accuracy: 0.6792\n",
+      "2968/2968 [==============================] - 5s 2ms/step - loss: 1.1802 - categorical_accuracy: 0.6637\n",
       "Epoch 41/50\n",
-      "2968/2968 [==============================] - 5s 2ms/step - loss: 1.1347 - categorical_accuracy: 0.6651\n",
+      "2968/2968 [==============================] - 5s 2ms/step - loss: 1.1529 - categorical_accuracy: 0.6691\n",
       "Epoch 42/50\n",
-      "2968/2968 [==============================] - 5s 2ms/step - loss: 1.0917 - categorical_accuracy: 0.6914\n",
+      "2968/2968 [==============================] - 5s 2ms/step - loss: 1.1212 - categorical_accuracy: 0.6819\n",
       "Epoch 43/50\n",
-      "2968/2968 [==============================] - 5s 2ms/step - loss: 1.0422 - categorical_accuracy: 0.6968\n",
+      "2968/2968 [==============================] - 5s 2ms/step - loss: 1.0843 - categorical_accuracy: 0.6883\n",
       "Epoch 44/50\n",
-      "2968/2968 [==============================] - 5s 2ms/step - loss: 1.0748 - categorical_accuracy: 0.6880\n",
+      "2968/2968 [==============================] - 5s 2ms/step - loss: 1.0444 - categorical_accuracy: 0.6958\n",
       "Epoch 45/50\n",
-      "2968/2968 [==============================] - 5s 2ms/step - loss: 1.0158 - categorical_accuracy: 0.7143\n",
+      "2968/2968 [==============================] - 5s 2ms/step - loss: 1.0176 - categorical_accuracy: 0.7143\n",
       "Epoch 46/50\n",
-      "2968/2968 [==============================] - 5s 2ms/step - loss: 1.0251 - categorical_accuracy: 0.6971\n",
+      "2968/2968 [==============================] - 5s 2ms/step - loss: 1.0113 - categorical_accuracy: 0.7163\n",
       "Epoch 47/50\n",
-      "2968/2968 [==============================] - 5s 2ms/step - loss: 0.9814 - categorical_accuracy: 0.7200\n",
+      "2968/2968 [==============================] - 5s 2ms/step - loss: 0.9901 - categorical_accuracy: 0.7143\n",
       "Epoch 48/50\n",
-      "2968/2968 [==============================] - 5s 2ms/step - loss: 0.9797 - categorical_accuracy: 0.7197\n",
+      "2968/2968 [==============================] - 5s 2ms/step - loss: 0.9763 - categorical_accuracy: 0.7146\n",
       "Epoch 49/50\n",
-      "2968/2968 [==============================] - 5s 2ms/step - loss: 0.9783 - categorical_accuracy: 0.7190\n",
+      "2968/2968 [==============================] - 5s 2ms/step - loss: 0.9495 - categorical_accuracy: 0.7264\n",
       "Epoch 50/50\n",
-      "2968/2968 [==============================] - 5s 2ms/step - loss: 0.9328 - categorical_accuracy: 0.7281\n"
+      "2968/2968 [==============================] - 5s 2ms/step - loss: 0.9282 - categorical_accuracy: 0.7433\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x120c77390>"
+       "<keras.callbacks.History at 0x13cbce630>"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
