Adding Sentinment Analysis, Restructuring

--- a/01_Data_Exploration.ipynb
+++ b/01_Data_Exploration.ipynb
@@ -664,7 +664,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### What if we only Manually Verified Audio Files"
+    "### What if we only use Manually Verified Audio Files"
    ]
   },
   {
